# givenergy-simulator

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GIVENERGY_UPSTREAM_AUDIT.md  IDEAS.md  README.md
.github/workflows/: ci.yml
crates/sim-api/: Cargo.toml
crates/sim-api/src/: lib.rs  main.rs
crates/sim-api/tests/: simulate_integration.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: lib.rs
crates/sim-core/tests/: balance_repro.rs  evc_smoke.rs  persistence.rs
crates/sim-faults/: Cargo.toml
crates/sim-faults/src/: lib.rs
crates/sim-modbus/: Cargo.toml
crates/sim-modbus/src/: lib.rs
crates/sim-modbus/tests/: givenergy_battery_limits.rs  givenergy_protocol.rs  integration_tcp.rs
crates/sim-models/: Cargo.toml
crates/sim-models/src/: lib.rs
crates/sim-recording/: Cargo.toml
crates/sim-recording/src/: lib.rs
crates/sim-registers/: Cargo.toml
crates/sim-registers/src/: lib.rs
crates/sim-scenarios/: Cargo.toml
crates/sim-scenarios/src/: lib.rs
crates/sim-storage/: Cargo.toml
crates/sim-storage/src/: lib.rs
crates/sim-tauri/: Cargo.toml  tauri.conf.json
crates/sim-tauri/capabilities/: default.json
crates/sim-tauri/src/: app_state.rs  atomic_write.rs  commands.rs  http.rs  lib.rs  main.rs
docs/: 00-master-architecture.md  01-rust-crate-design.md  02-state-model.md  03-register-catalogue-strategy.md  04-modbus-emulation.md  05-tauri-ipc-contracts.md  06-solar-engine.md  07-load-engine.md  08-battery-algorithms.md  09-inverter-behaviour.md  10-scenario-dsl.md  11-recording-format.md  12-fault-framework.md  13-headless-ci-design.md  14-testing-matrix.md  15-backlog.md  16-sequence-diagrams.md  17-roadmap.md  architecture-diagram.md  evc-file-simulator-spec.md  gap-analysis.md  gateway-client-integration.md  gateway-integration-guide.md  gateway-register-reference.md
examples/: basic_day.yaml  force_charge.yaml  grid_outage.yaml  two_day_clear.yaml  weather_change.yaml
examples/profiles/: shift_worker.yaml
scripts/: run-ci.sh  run-pi.sh
ui/: index.html  package-lock.json  package.json  playwright.config.js
ui/tests/: gui.spec.cjs
