[package]
name = "sim-api"
version.workspace = true
edition.workspace = true

[dependencies]
sim-core = { workspace = true }
sim-models = { workspace = true }
sim-registers = { workspace = true }
sim-faults = { workspace = true }
sim-scenarios = { workspace = true }
sim-recording = { workspace = true }
sim-modbus = { workspace = true }
sim-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
sim-modbus = { workspace = true }
sim-registers = { workspace = true }
sim-models = { workspace = true }
sim-core = { workspace = true }
tokio = { workspace = true }
