[package]
name = "sim-core"
version.workspace = true
edition.workspace = true

[dependencies]
sim-models = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sim-faults = { workspace = true }
serde_json = { workspace = true }
proptest = "1"
