[package]
name = "sim-modbus"
version.workspace = true
edition.workspace = true

[dependencies]
sim-models = { workspace = true }
sim-core = { workspace = true }
sim-registers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crc = "3"
fastrand = "2"

[dev-dependencies]
sim-models = { workspace = true }
sim-registers = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util", "time"] }
chrono = { workspace = true }
