[package]
name = "sim-storage"
version.workspace = true
edition.workspace = true

[dependencies]
sim-models = { workspace = true }
sim-recording = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sim-core = { workspace = true }
chrono = { workspace = true }
